[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "pki-federal"
version = "0.4.0"
description = "DoD and Federal PKI certificate utilities: x509 parsing, CRL caching, PKCS7 trust store management, and CAC/PIV identity extraction."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    {name = "MeV Technology Consulting, LLC"},
]
keywords = ["pki", "x509", "cac", "piv", "dod", "federal", "certificate", "crl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pki-core>=0.3.0",
    "cryptography>=44.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://oss.mevtc.com"
Repository = "https://github.com/mevtc/pki-federal"
Issues = "https://github.com/mevtc/pki-federal/issues"
Changelog = "https://github.com/mevtc/pki-federal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "bandit>=1.8",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pki.federal"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pki"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110"]